# python-isa-l

./: CHANGELOG.rst  pyproject.toml  setup.cfg  setup.py
src/isal/: igzip_lib.pyx  isal_shared.h  isal_zlib.pyx
tests/: test_igzip_lib.py
