[build-system]
requires = ["setuptools>=51", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isal"
version= "1.1.0-dev"
description = """
Faster zlib and gzip compatible compression and decompression by providing \
python bindings for the ISA-L ibrary."""
keywords=["isal", "isa-l", "compression", "deflate", "gzip", "igzip"]
authors = [{name = "Leiden University Medical Center"},
           {email = "r.h.p.vorderman@lumc.nl"}]
readme = "README.rst"
requires-python = ">=3.7"  # METH_FASTCALL is used.
classifiers = [
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: C",
        "Development Status :: 5 - Production/Stable",
        "Topic :: System :: Archiving :: Compression",
        "License :: OSI Approved :: Python Software Foundation License",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
]
urls.homepage = "https://github.com/pycompression/python-isal"
urls.documentation = "python-isal.readthedocs.io"