[metadata]
license_file=LICENSE
license="PSF-2.0"

[options]
packages = find:
package_dir =
    = src
zip_safe=False

[options.packages.find]
where = src

[options.package_data]
isal = ['*.pyi', 'py.typed',
       # Include isa-l LICENSE and other relevant files
       # with the binary distribution.
       'isa-l/LICENSE', 'isa-l/README.md',
       'isa-l/Release_notes.txt']
